src/y.output
Grammar

    0 $accept: pgm $end

    1 pgm: programa

    2 programa: PR_MAIN declaracion_variables lista_sentencias
    3         | PR_MAIN lista_sentencias

    4 sentencia: asignacion PUNTO_Y_COMA

    5 lista_sentencias: sentencia
    6                 | sentencia lista_sentencias

    7 sentencia: condicional
    8          | iteracion
    9          | io
   10          | iguales PUNTO_Y_COMA
   11          | filter PUNTO_Y_COMA

   12 iguales: PR_IGUALES PAR_ABRE expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

   13 lista_expresiones: expresion COMA lista_expresiones
   14                  | expresion

   15 filter: PR_FILTER PAR_ABRE condicion_filter COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

   16 condicion_filter: comparacion_filter
   17                 | comparacion_filter OP_LOG_AND comparacion_filter
   18                 | comparacion_filter OP_LOG_OR comparacion_filter

   19 comparacion_filter: OP_FILTER comparador expresion
   20                   | PR_NOT OP_FILTER comparador expresion

   21 lista_variables: TOKEN_ID COMA lista_variables
   22                | TOKEN_ID

   23 io: entrada
   24   | salida

   25 entrada: PR_READ TOKEN_ID

   26 salida: PR_WRITE TOKEN_ID
   27       | PR_WRITE CONST_STR

   28 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then PR_ENDIF
   29            | PR_IF PAR_ABRE condicion PAR_CIERRA then else PR_ENDIF

   30 then: PR_THEN lista_sentencias

   31 else: PR_ELSE lista_sentencias

   32 condicion: comparacion
   33          | comparacion OP_LOG_AND comparacion
   34          | comparacion OP_LOG_OR comparacion

   35 comparacion: expresion comparador expresion
   36            | PR_NOT expresion

   37 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

   38 asignacion: TOKEN_ID OP_IGUAL expresion

   39 expresion: termino OP_CONCAT factor
   40          | termino
   41          | expresion OP_SUMA termino
   42          | expresion OP_RESTA termino

   43 termino: factor
   44        | termino OP_DIV factor
   45        | termino OP_MUL factor

   46 factor: CONST_STR
   47       | CONST_INT
   48       | CONST_FLOAT
   49       | TOKEN_ID

   50 declaracion_variables: PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA
   51                      | PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA declaracion_variables

   52 declaracion_variables_interna: TOKEN_ID COMA declaracion_variables_interna COMA tipo_dato
   53                              | TOKEN_ID COR_CIERRA PR_AS COR_ABRE tipo_dato

   54 tipo_dato: PR_INT
   55          | PR_FLOAT
   56          | PR_STRING

   57 comparador: OP_MAYOR
   58           | OP_MENOR
   59           | OP_MENOR_IGUAL
   60           | OP_MAYOR_IGUAL
   61           | OP_IGUAL_IGUAL
   62           | OP_DISTINTO


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ID (258) 21 22 25 26 38 49 52 53
CONST_INT (259) 47
CONST_STR (260) 27 46
CONST_FLOAT (261) 48
PR_MAIN (262) 2 3
PR_IGUALES (263) 12
PR_FILTER (264) 15
PR_WRITE (265) 26 27
PR_READ (266) 25
PR_IF (267) 28 29
PR_THEN (268) 30
PR_ENDIF (269) 28 29
PR_ELSE (270) 31
PR_NOT (271) 20 36
PR_WHILE (272) 37
PR_DO (273) 37
PR_ENDWHILE (274) 37
PAR_ABRE (275) 12 15 28 29 37
PAR_CIERRA (276) 12 15 28 29 37
COR_ABRE (277) 12 15 50 51 53
COR_CIERRA (278) 12 15 50 51 53
COMA (279) 12 13 15 21 52
OP_LOG_AND (280) 17 33
OP_LOG_OR (281) 18 34
OP_SUMA (282) 41
OP_RESTA (283) 42
OP_MUL (284) 45
OP_DIV (285) 44
OP_MAYOR (286) 57
OP_MAYOR_IGUAL (287) 60
OP_MENOR (288) 58
OP_MENOR_IGUAL (289) 59
OP_DISTINTO (290) 62
OP_IGUAL_IGUAL (291) 61
OP_IGUAL (292) 38
PR_AS (293) 53
PR_DIM (294) 50 51
OP_FILTER (295) 19 20
PR_FLOAT (296) 55
PR_INT (297) 54
PR_STRING (298) 56
OP_CONCAT (299) 39
PUNTO_Y_COMA (300) 4 10 11 50 51


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
pgm (47)
    on left: 1, on right: 0
programa (48)
    on left: 2 3, on right: 1
sentencia (49)
    on left: 4 7 8 9 10 11, on right: 5 6
lista_sentencias (50)
    on left: 5 6, on right: 2 3 6 30 31 37
iguales (51)
    on left: 12, on right: 10
lista_expresiones (52)
    on left: 13 14, on right: 12 13
filter (53)
    on left: 15, on right: 11
condicion_filter (54)
    on left: 16 17 18, on right: 15
comparacion_filter (55)
    on left: 19 20, on right: 16 17 18
lista_variables (56)
    on left: 21 22, on right: 15 21
io (57)
    on left: 23 24, on right: 9
entrada (58)
    on left: 25, on right: 23
salida (59)
    on left: 26 27, on right: 24
condicional (60)
    on left: 28 29, on right: 7
then (61)
    on left: 30, on right: 28 29
else (62)
    on left: 31, on right: 29
condicion (63)
    on left: 32 33 34, on right: 28 29 37
comparacion (64)
    on left: 35 36, on right: 32 33 34
iteracion (65)
    on left: 37, on right: 8
asignacion (66)
    on left: 38, on right: 4
expresion (67)
    on left: 39 40 41 42, on right: 12 13 14 19 20 35 36 38 41 42
termino (68)
    on left: 43 44 45, on right: 39 40 41 42 44 45
factor (69)
    on left: 46 47 48 49, on right: 39 43 44 45
declaracion_variables (70)
    on left: 50 51, on right: 2 51
declaracion_variables_interna (71)
    on left: 52 53, on right: 50 51 52
tipo_dato (72)
    on left: 54 55 56, on right: 52 53
comparador (73)
    on left: 57 58 59 60 61 62, on right: 19 20 35


state 0

    0 $accept: . pgm $end

    PR_MAIN  shift, and go to state 1

    pgm       go to state 2
    programa  go to state 3


state 1

    2 programa: PR_MAIN . declaracion_variables lista_sentencias
    3         | PR_MAIN . lista_sentencias

    TOKEN_ID    shift, and go to state 4
    PR_IGUALES  shift, and go to state 5
    PR_FILTER   shift, and go to state 6
    PR_WRITE    shift, and go to state 7
    PR_READ     shift, and go to state 8
    PR_IF       shift, and go to state 9
    PR_WHILE    shift, and go to state 10
    PR_DIM      shift, and go to state 11

    sentencia              go to state 12
    lista_sentencias       go to state 13
    iguales                go to state 14
    filter                 go to state 15
    io                     go to state 16
    entrada                go to state 17
    salida                 go to state 18
    condicional            go to state 19
    iteracion              go to state 20
    asignacion             go to state 21
    declaracion_variables  go to state 22


state 2

    0 $accept: pgm . $end

    $end  shift, and go to state 23


state 3

    1 pgm: programa .

    $default  reduce using rule 1 (pgm)


state 4

   38 asignacion: TOKEN_ID . OP_IGUAL expresion

    OP_IGUAL  shift, and go to state 24


state 5

   12 iguales: PR_IGUALES . PAR_ABRE expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    PAR_ABRE  shift, and go to state 25


state 6

   15 filter: PR_FILTER . PAR_ABRE condicion_filter COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    PAR_ABRE  shift, and go to state 26


state 7

   26 salida: PR_WRITE . TOKEN_ID
   27       | PR_WRITE . CONST_STR

    TOKEN_ID   shift, and go to state 27
    CONST_STR  shift, and go to state 28


state 8

   25 entrada: PR_READ . TOKEN_ID

    TOKEN_ID  shift, and go to state 29


state 9

   28 condicional: PR_IF . PAR_ABRE condicion PAR_CIERRA then PR_ENDIF
   29            | PR_IF . PAR_ABRE condicion PAR_CIERRA then else PR_ENDIF

    PAR_ABRE  shift, and go to state 30


state 10

   37 iteracion: PR_WHILE . PAR_ABRE condicion PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

    PAR_ABRE  shift, and go to state 31


state 11

   50 declaracion_variables: PR_DIM . COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA
   51                      | PR_DIM . COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA declaracion_variables

    COR_ABRE  shift, and go to state 32


state 12

    5 lista_sentencias: sentencia .
    6                 | sentencia . lista_sentencias

    TOKEN_ID    shift, and go to state 4
    PR_IGUALES  shift, and go to state 5
    PR_FILTER   shift, and go to state 6
    PR_WRITE    shift, and go to state 7
    PR_READ     shift, and go to state 8
    PR_IF       shift, and go to state 9
    PR_WHILE    shift, and go to state 10

    $default  reduce using rule 5 (lista_sentencias)

    sentencia         go to state 12
    lista_sentencias  go to state 33
    iguales           go to state 14
    filter            go to state 15
    io                go to state 16
    entrada           go to state 17
    salida            go to state 18
    condicional       go to state 19
    iteracion         go to state 20
    asignacion        go to state 21


state 13

    3 programa: PR_MAIN lista_sentencias .

    $default  reduce using rule 3 (programa)


state 14

   10 sentencia: iguales . PUNTO_Y_COMA

    PUNTO_Y_COMA  shift, and go to state 34


state 15

   11 sentencia: filter . PUNTO_Y_COMA

    PUNTO_Y_COMA  shift, and go to state 35


state 16

    9 sentencia: io .

    $default  reduce using rule 9 (sentencia)


state 17

   23 io: entrada .

    $default  reduce using rule 23 (io)


state 18

   24 io: salida .

    $default  reduce using rule 24 (io)


state 19

    7 sentencia: condicional .

    $default  reduce using rule 7 (sentencia)


state 20

    8 sentencia: iteracion .

    $default  reduce using rule 8 (sentencia)


state 21

    4 sentencia: asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA  shift, and go to state 36


state 22

    2 programa: PR_MAIN declaracion_variables . lista_sentencias

    TOKEN_ID    shift, and go to state 4
    PR_IGUALES  shift, and go to state 5
    PR_FILTER   shift, and go to state 6
    PR_WRITE    shift, and go to state 7
    PR_READ     shift, and go to state 8
    PR_IF       shift, and go to state 9
    PR_WHILE    shift, and go to state 10

    sentencia         go to state 12
    lista_sentencias  go to state 37
    iguales           go to state 14
    filter            go to state 15
    io                go to state 16
    entrada           go to state 17
    salida            go to state 18
    condicional       go to state 19
    iteracion         go to state 20
    asignacion        go to state 21


state 23

    0 $accept: pgm $end .

    $default  accept


state 24

   38 asignacion: TOKEN_ID OP_IGUAL . expresion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    expresion  go to state 42
    termino    go to state 43
    factor     go to state 44


state 25

   12 iguales: PR_IGUALES PAR_ABRE . expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    expresion  go to state 45
    termino    go to state 43
    factor     go to state 44


state 26

   15 filter: PR_FILTER PAR_ABRE . condicion_filter COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    PR_NOT     shift, and go to state 46
    OP_FILTER  shift, and go to state 47

    condicion_filter    go to state 48
    comparacion_filter  go to state 49


state 27

   26 salida: PR_WRITE TOKEN_ID .

    $default  reduce using rule 26 (salida)


state 28

   27 salida: PR_WRITE CONST_STR .

    $default  reduce using rule 27 (salida)


state 29

   25 entrada: PR_READ TOKEN_ID .

    $default  reduce using rule 25 (entrada)


state 30

   28 condicional: PR_IF PAR_ABRE . condicion PAR_CIERRA then PR_ENDIF
   29            | PR_IF PAR_ABRE . condicion PAR_CIERRA then else PR_ENDIF

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    PR_NOT       shift, and go to state 50

    condicion    go to state 51
    comparacion  go to state 52
    expresion    go to state 53
    termino      go to state 43
    factor       go to state 44


state 31

   37 iteracion: PR_WHILE PAR_ABRE . condicion PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    PR_NOT       shift, and go to state 50

    condicion    go to state 54
    comparacion  go to state 52
    expresion    go to state 53
    termino      go to state 43
    factor       go to state 44


state 32

   50 declaracion_variables: PR_DIM COR_ABRE . declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA
   51                      | PR_DIM COR_ABRE . declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA declaracion_variables

    TOKEN_ID  shift, and go to state 55

    declaracion_variables_interna  go to state 56


state 33

    6 lista_sentencias: sentencia lista_sentencias .

    $default  reduce using rule 6 (lista_sentencias)


state 34

   10 sentencia: iguales PUNTO_Y_COMA .

    $default  reduce using rule 10 (sentencia)


state 35

   11 sentencia: filter PUNTO_Y_COMA .

    $default  reduce using rule 11 (sentencia)


state 36

    4 sentencia: asignacion PUNTO_Y_COMA .

    $default  reduce using rule 4 (sentencia)


state 37

    2 programa: PR_MAIN declaracion_variables lista_sentencias .

    $default  reduce using rule 2 (programa)


state 38

   49 factor: TOKEN_ID .

    $default  reduce using rule 49 (factor)


state 39

   47 factor: CONST_INT .

    $default  reduce using rule 47 (factor)


state 40

   46 factor: CONST_STR .

    $default  reduce using rule 46 (factor)


state 41

   48 factor: CONST_FLOAT .

    $default  reduce using rule 48 (factor)


state 42

   38 asignacion: TOKEN_ID OP_IGUAL expresion .
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58

    $default  reduce using rule 38 (asignacion)


state 43

   39 expresion: termino . OP_CONCAT factor
   40          | termino .
   44 termino: termino . OP_DIV factor
   45        | termino . OP_MUL factor

    OP_MUL     shift, and go to state 59
    OP_DIV     shift, and go to state 60
    OP_CONCAT  shift, and go to state 61

    $default  reduce using rule 40 (expresion)


state 44

   43 termino: factor .

    $default  reduce using rule 43 (termino)


state 45

   12 iguales: PR_IGUALES PAR_ABRE expresion . COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    COMA      shift, and go to state 62
    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58


state 46

   20 comparacion_filter: PR_NOT . OP_FILTER comparador expresion

    OP_FILTER  shift, and go to state 63


state 47

   19 comparacion_filter: OP_FILTER . comparador expresion

    OP_MAYOR        shift, and go to state 64
    OP_MAYOR_IGUAL  shift, and go to state 65
    OP_MENOR        shift, and go to state 66
    OP_MENOR_IGUAL  shift, and go to state 67
    OP_DISTINTO     shift, and go to state 68
    OP_IGUAL_IGUAL  shift, and go to state 69

    comparador  go to state 70


state 48

   15 filter: PR_FILTER PAR_ABRE condicion_filter . COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    COMA  shift, and go to state 71


state 49

   16 condicion_filter: comparacion_filter .
   17                 | comparacion_filter . OP_LOG_AND comparacion_filter
   18                 | comparacion_filter . OP_LOG_OR comparacion_filter

    OP_LOG_AND  shift, and go to state 72
    OP_LOG_OR   shift, and go to state 73

    $default  reduce using rule 16 (condicion_filter)


state 50

   36 comparacion: PR_NOT . expresion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    expresion  go to state 74
    termino    go to state 43
    factor     go to state 44


state 51

   28 condicional: PR_IF PAR_ABRE condicion . PAR_CIERRA then PR_ENDIF
   29            | PR_IF PAR_ABRE condicion . PAR_CIERRA then else PR_ENDIF

    PAR_CIERRA  shift, and go to state 75


state 52

   32 condicion: comparacion .
   33          | comparacion . OP_LOG_AND comparacion
   34          | comparacion . OP_LOG_OR comparacion

    OP_LOG_AND  shift, and go to state 76
    OP_LOG_OR   shift, and go to state 77

    $default  reduce using rule 32 (condicion)


state 53

   35 comparacion: expresion . comparador expresion
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    OP_SUMA         shift, and go to state 57
    OP_RESTA        shift, and go to state 58
    OP_MAYOR        shift, and go to state 64
    OP_MAYOR_IGUAL  shift, and go to state 65
    OP_MENOR        shift, and go to state 66
    OP_MENOR_IGUAL  shift, and go to state 67
    OP_DISTINTO     shift, and go to state 68
    OP_IGUAL_IGUAL  shift, and go to state 69

    comparador  go to state 78


state 54

   37 iteracion: PR_WHILE PAR_ABRE condicion . PAR_CIERRA PR_DO lista_sentencias PR_ENDWHILE

    PAR_CIERRA  shift, and go to state 79


state 55

   52 declaracion_variables_interna: TOKEN_ID . COMA declaracion_variables_interna COMA tipo_dato
   53                              | TOKEN_ID . COR_CIERRA PR_AS COR_ABRE tipo_dato

    COR_CIERRA  shift, and go to state 80
    COMA        shift, and go to state 81


state 56

   50 declaracion_variables: PR_DIM COR_ABRE declaracion_variables_interna . COR_CIERRA PUNTO_Y_COMA
   51                      | PR_DIM COR_ABRE declaracion_variables_interna . COR_CIERRA PUNTO_Y_COMA declaracion_variables

    COR_CIERRA  shift, and go to state 82


state 57

   41 expresion: expresion OP_SUMA . termino

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    termino  go to state 83
    factor   go to state 44


state 58

   42 expresion: expresion OP_RESTA . termino

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    termino  go to state 84
    factor   go to state 44


state 59

   45 termino: termino OP_MUL . factor

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    factor  go to state 85


state 60

   44 termino: termino OP_DIV . factor

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    factor  go to state 86


state 61

   39 expresion: termino OP_CONCAT . factor

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    factor  go to state 87


state 62

   12 iguales: PR_IGUALES PAR_ABRE expresion COMA . COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    COR_ABRE  shift, and go to state 88


state 63

   20 comparacion_filter: PR_NOT OP_FILTER . comparador expresion

    OP_MAYOR        shift, and go to state 64
    OP_MAYOR_IGUAL  shift, and go to state 65
    OP_MENOR        shift, and go to state 66
    OP_MENOR_IGUAL  shift, and go to state 67
    OP_DISTINTO     shift, and go to state 68
    OP_IGUAL_IGUAL  shift, and go to state 69

    comparador  go to state 89


state 64

   57 comparador: OP_MAYOR .

    $default  reduce using rule 57 (comparador)


state 65

   60 comparador: OP_MAYOR_IGUAL .

    $default  reduce using rule 60 (comparador)


state 66

   58 comparador: OP_MENOR .

    $default  reduce using rule 58 (comparador)


state 67

   59 comparador: OP_MENOR_IGUAL .

    $default  reduce using rule 59 (comparador)


state 68

   62 comparador: OP_DISTINTO .

    $default  reduce using rule 62 (comparador)


state 69

   61 comparador: OP_IGUAL_IGUAL .

    $default  reduce using rule 61 (comparador)


state 70

   19 comparacion_filter: OP_FILTER comparador . expresion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    expresion  go to state 90
    termino    go to state 43
    factor     go to state 44


state 71

   15 filter: PR_FILTER PAR_ABRE condicion_filter COMA . COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    COR_ABRE  shift, and go to state 91


state 72

   17 condicion_filter: comparacion_filter OP_LOG_AND . comparacion_filter

    PR_NOT     shift, and go to state 46
    OP_FILTER  shift, and go to state 47

    comparacion_filter  go to state 92


state 73

   18 condicion_filter: comparacion_filter OP_LOG_OR . comparacion_filter

    PR_NOT     shift, and go to state 46
    OP_FILTER  shift, and go to state 47

    comparacion_filter  go to state 93


state 74

   36 comparacion: PR_NOT expresion .
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58

    $default  reduce using rule 36 (comparacion)


state 75

   28 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA . then PR_ENDIF
   29            | PR_IF PAR_ABRE condicion PAR_CIERRA . then else PR_ENDIF

    PR_THEN  shift, and go to state 94

    then  go to state 95


state 76

   33 condicion: comparacion OP_LOG_AND . comparacion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    PR_NOT       shift, and go to state 50

    comparacion  go to state 96
    expresion    go to state 53
    termino      go to state 43
    factor       go to state 44


state 77

   34 condicion: comparacion OP_LOG_OR . comparacion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41
    PR_NOT       shift, and go to state 50

    comparacion  go to state 97
    expresion    go to state 53
    termino      go to state 43
    factor       go to state 44


state 78

   35 comparacion: expresion comparador . expresion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    expresion  go to state 98
    termino    go to state 43
    factor     go to state 44


state 79

   37 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA . PR_DO lista_sentencias PR_ENDWHILE

    PR_DO  shift, and go to state 99


state 80

   53 declaracion_variables_interna: TOKEN_ID COR_CIERRA . PR_AS COR_ABRE tipo_dato

    PR_AS  shift, and go to state 100


state 81

   52 declaracion_variables_interna: TOKEN_ID COMA . declaracion_variables_interna COMA tipo_dato

    TOKEN_ID  shift, and go to state 55

    declaracion_variables_interna  go to state 101


state 82

   50 declaracion_variables: PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA . PUNTO_Y_COMA
   51                      | PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA . PUNTO_Y_COMA declaracion_variables

    PUNTO_Y_COMA  shift, and go to state 102


state 83

   41 expresion: expresion OP_SUMA termino .
   44 termino: termino . OP_DIV factor
   45        | termino . OP_MUL factor

    OP_MUL  shift, and go to state 59
    OP_DIV  shift, and go to state 60

    $default  reduce using rule 41 (expresion)


state 84

   42 expresion: expresion OP_RESTA termino .
   44 termino: termino . OP_DIV factor
   45        | termino . OP_MUL factor

    OP_MUL  shift, and go to state 59
    OP_DIV  shift, and go to state 60

    $default  reduce using rule 42 (expresion)


state 85

   45 termino: termino OP_MUL factor .

    $default  reduce using rule 45 (termino)


state 86

   44 termino: termino OP_DIV factor .

    $default  reduce using rule 44 (termino)


state 87

   39 expresion: termino OP_CONCAT factor .

    $default  reduce using rule 39 (expresion)


state 88

   12 iguales: PR_IGUALES PAR_ABRE expresion COMA COR_ABRE . lista_expresiones COR_CIERRA PAR_CIERRA

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    lista_expresiones  go to state 103
    expresion          go to state 104
    termino            go to state 43
    factor             go to state 44


state 89

   20 comparacion_filter: PR_NOT OP_FILTER comparador . expresion

    TOKEN_ID     shift, and go to state 38
    CONST_INT    shift, and go to state 39
    CONST_STR    shift, and go to state 40
    CONST_FLOAT  shift, and go to state 41

    expresion  go to state 105
    termino    go to state 43
    factor     go to state 44


state 90

   19 comparacion_filter: OP_FILTER comparador expresion .
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58

    $default  reduce using rule 19 (comparacion_filter)


state 91

   15 filter: PR_FILTER PAR_ABRE condicion_filter COMA COR_ABRE . lista_variables COR_CIERRA PAR_CIERRA

    TOKEN_ID  shift, and go to state 106

    lista_variables  go to state 107


state 92

   17 condicion_filter: comparacion_filter OP_LOG_AND comparacion_filter .

    $default  reduce using rule 17 (condicion_filter)


state 93

   18 condicion_filter: comparacion_filter OP_LOG_OR comparacion_filter .

    $default  reduce using rule 18 (condicion_filter)


state 94

   30 then: PR_THEN . lista_sentencias

    TOKEN_ID    shift, and go to state 4
    PR_IGUALES  shift, and go to state 5
    PR_FILTER   shift, and go to state 6
    PR_WRITE    shift, and go to state 7
    PR_READ     shift, and go to state 8
    PR_IF       shift, and go to state 9
    PR_WHILE    shift, and go to state 10

    sentencia         go to state 12
    lista_sentencias  go to state 108
    iguales           go to state 14
    filter            go to state 15
    io                go to state 16
    entrada           go to state 17
    salida            go to state 18
    condicional       go to state 19
    iteracion         go to state 20
    asignacion        go to state 21


state 95

   28 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then . PR_ENDIF
   29            | PR_IF PAR_ABRE condicion PAR_CIERRA then . else PR_ENDIF

    PR_ENDIF  shift, and go to state 109
    PR_ELSE   shift, and go to state 110

    else  go to state 111


state 96

   33 condicion: comparacion OP_LOG_AND comparacion .

    $default  reduce using rule 33 (condicion)


state 97

   34 condicion: comparacion OP_LOG_OR comparacion .

    $default  reduce using rule 34 (condicion)


state 98

   35 comparacion: expresion comparador expresion .
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58

    $default  reduce using rule 35 (comparacion)


state 99

   37 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA PR_DO . lista_sentencias PR_ENDWHILE

    TOKEN_ID    shift, and go to state 4
    PR_IGUALES  shift, and go to state 5
    PR_FILTER   shift, and go to state 6
    PR_WRITE    shift, and go to state 7
    PR_READ     shift, and go to state 8
    PR_IF       shift, and go to state 9
    PR_WHILE    shift, and go to state 10

    sentencia         go to state 12
    lista_sentencias  go to state 112
    iguales           go to state 14
    filter            go to state 15
    io                go to state 16
    entrada           go to state 17
    salida            go to state 18
    condicional       go to state 19
    iteracion         go to state 20
    asignacion        go to state 21


state 100

   53 declaracion_variables_interna: TOKEN_ID COR_CIERRA PR_AS . COR_ABRE tipo_dato

    COR_ABRE  shift, and go to state 113


state 101

   52 declaracion_variables_interna: TOKEN_ID COMA declaracion_variables_interna . COMA tipo_dato

    COMA  shift, and go to state 114


state 102

   50 declaracion_variables: PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA .
   51                      | PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA . declaracion_variables

    PR_DIM  shift, and go to state 11

    $default  reduce using rule 50 (declaracion_variables)

    declaracion_variables  go to state 115


state 103

   12 iguales: PR_IGUALES PAR_ABRE expresion COMA COR_ABRE lista_expresiones . COR_CIERRA PAR_CIERRA

    COR_CIERRA  shift, and go to state 116


state 104

   13 lista_expresiones: expresion . COMA lista_expresiones
   14                  | expresion .
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    COMA      shift, and go to state 117
    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58

    $default  reduce using rule 14 (lista_expresiones)


state 105

   20 comparacion_filter: PR_NOT OP_FILTER comparador expresion .
   41 expresion: expresion . OP_SUMA termino
   42          | expresion . OP_RESTA termino

    OP_SUMA   shift, and go to state 57
    OP_RESTA  shift, and go to state 58

    $default  reduce using rule 20 (comparacion_filter)


state 106

   21 lista_variables: TOKEN_ID . COMA lista_variables
   22                | TOKEN_ID .

    COMA  shift, and go to state 118

    $default  reduce using rule 22 (lista_variables)


state 107

   15 filter: PR_FILTER PAR_ABRE condicion_filter COMA COR_ABRE lista_variables . COR_CIERRA PAR_CIERRA

    COR_CIERRA  shift, and go to state 119


state 108

   30 then: PR_THEN lista_sentencias .

    $default  reduce using rule 30 (then)


state 109

   28 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then PR_ENDIF .

    $default  reduce using rule 28 (condicional)


state 110

   31 else: PR_ELSE . lista_sentencias

    TOKEN_ID    shift, and go to state 4
    PR_IGUALES  shift, and go to state 5
    PR_FILTER   shift, and go to state 6
    PR_WRITE    shift, and go to state 7
    PR_READ     shift, and go to state 8
    PR_IF       shift, and go to state 9
    PR_WHILE    shift, and go to state 10

    sentencia         go to state 12
    lista_sentencias  go to state 120
    iguales           go to state 14
    filter            go to state 15
    io                go to state 16
    entrada           go to state 17
    salida            go to state 18
    condicional       go to state 19
    iteracion         go to state 20
    asignacion        go to state 21


state 111

   29 condicional: PR_IF PAR_ABRE condicion PAR_CIERRA then else . PR_ENDIF

    PR_ENDIF  shift, and go to state 121


state 112

   37 iteracion: PR_WHILE PAR_ABRE condicion PAR_CIERRA PR_DO lista_sentencias . PR_ENDWHILE

    PR_ENDWHILE  shift, and go to state 122


state 113

   53 declaracion_variables_interna: TOKEN_ID COR_CIERRA PR_AS COR_ABRE . tipo_dato

    PR_FLOAT   shift, and go to state 123
    PR_INT     shift, and go to state 124
    PR_STRING  shift, and go to state 125

    tipo_dato  go to state 126


state 114

   52 declaracion_variables_interna: TOKEN_ID COMA declaracion_variables_interna COMA . tipo_dato

    PR_FLOAT   shift, and go to state 123
    PR_INT     shift, and go to state 124
    PR_STRING  shift, and go to state 125

    tipo_dato  go to state 127


state 115

   51 declaracion_variables: PR_DIM COR_ABRE declaracion_variables_interna COR_CIERRA PUNTO_Y_COMA declaracion_variables .

    $default  reduce using rule 51 (declaracion_variables)


state 116
